# trellis

./: .gitignore  Cargo.toml  README.md  pyproject.toml
claude-states/: claude-state-done-thinking.txt  claude-state-idle-with-checklist.txt  claude-state-needs-input.txt  claude-state-thinking.txt
docs/superpowers/plans/: 2026-04-06-torchard-plan.md  2026-04-07-rust-tui-port-plan.md
docs/superpowers/specs/: 2026-04-07-rust-tui-port-design.md
src/: claude_pane.rs  claude_session.rs  conversation_index.rs  db.rs  fuzzy.rs  git.rs  main.rs  manager.rs  models.rs  switch.rs  tmux.rs  utils.rs
src/tui/: action_menu.rs  adopt_session.rs  cleanup.rs  confirm.rs  edit_branch.rs  history.rs  mod.rs  new_session.rs  new_tab.rs  rename.rs  review.rs  session_list.rs  settings.rs  theme.rs
tests/: test_claude_session.py  test_db.py  test_git.py  test_manager.py  test_tmux.py
torchard/: __main__.py
torchard-rs/src/: db.rs  main.rs  manager.rs  utils.rs
torchard-rs/src/tui/: action_menu.rs  confirm.rs  help.rs  history.rs  mod.rs  session_list.rs
torchard/core/: claude_session.py  conversation_index.py  db.py  fuzzy.py  git.py  history.py  manager.py  models.py  tmux.py
torchard/tui/: switch.py  utils.py
torchard/tui/views/: adopt_session.py  cleanup.py  confirm.py  edit_branch.py  history.py  new_session.py  new_tab.py  rename_session.py  review.py  session_list.py
